# bounce_desktop

./: .gitignore  .gitmodules  CHANGELOG.md  backend.h  bounce_desk_test.py  client.cpp  client.h  client_ext.cpp  client_ext.h  client_loop.cpp  client_loop.h  client_test.cpp  display_vars.cpp  display_vars_test.cpp  frame.h  integration_test_main.cpp  launch_weston.cpp  launch_weston.h  launch_weston_test.cpp  log_displays.sh  makefile  meson.build  platform_info.sh  process.cpp  process.h  process_manager.cpp  process_manager.h  process_manager_main.cpp  process_test.cpp  pyproject.toml  readme.md  run_test.sh  sdl_viewer.cpp  sdl_viewer.h  stdout_poc_main.cpp  test_platforms.sh  time_aliases.h  wayland_backend.cpp  wayland_backend.h  wayland_backend_test.cpp  (+1 more)
packaging/: build_package.sh  test_package.sh
process/: env_vars.cpp  env_vars.h  process_helpers.cpp  process_helpers.h  stream.cpp  stream.h
reaper/: cleanup.cpp  impl.cpp  impl.h  impl_main.cpp  ipc.h  ipc.tpp  ipc_old.h  ipc_test.cpp  process.h  reaper.cpp  reaper.h  reaper_test.cpp
reaper/tests/: reaper_parent.cpp  reaper_parent.py  reaper_ptree.py
support_tests/: run_test.sh
